--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "phonegap-plugin-push",
+    "name": "com.peerio.cordova.plugin.push",
     "description": "Register and receive push notifications.",
-    "version": "1.5.3",
+    "version": "1.5.4",
     "homepage": "http://github.com/phonegap/phonegap-plugin-push#readme",
     "repository": {
         "type": "git",
