--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
     "name": "com.peerio.cordova.plugin.push",
     "description": "Register and receive push notifications.",
-    "version": "1.5.4",
+    "version": "1.5.6",
     "homepage": "http://github.com/phonegap/phonegap-plugin-push#readme",
     "repository": {
         "type": "git",
-        "url": "git://github.com/phonegap/phonegap-plugin-push.git"
+        "url": "https://github.com/PeerioTechnologies/peerio-cordova-push"
     },
-    "bugs": {
-        "url": "https://github.com/phonegap/phonegap-plugin-push/issues"
+    "forked": {
+        "type": "npm",
+        "name": "phonegap-plugin-push",
+        "version": "1.5.3"
     },
     "cordova": {
         "id": "phonegap-plugin-push",
